--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,8 @@ p {
 }
 
 .green-divider {
-    border: 2px solid #7de7d6;
+    border-bottom: 4px solid #7de7d6;
+    border-radius: 10px;
     width: 60px;
     margin: 0px auto 20px;
 }
@@ -841,6 +842,71 @@ legend {
 
 .rating .stars .fa-star:hover~.fa-star {
     color: gray;
+}
+
+
+/*FAQ*/
+
+main.faq h1 {
+    padding-bottom: 10px;
+}
+
+.rubrique_faq {
+    width: 90%;
+    margin: 0px auto;
+}
+
+main.faq li {
+    text-align: justify;
+    display: inline-block;
+    padding: 15px;
+}
+
+.accordion {
+    background-color: whitesmoke;
+    padding: 20px;
+}
+
+#input_search_faq:focus {
+    border: none;
+    background-color: transparent;
+    border-radius: 0px;
+    box-shadow: 0px 10px 10px -10px #7de7d6;
+}
+
+.div_search_faq {
+    width: 100%;
+    height: 100%;
+    padding-bottom: 10px;
+}
+
+#input_search_faq::placeholder {
+    color: black;
+    text-align: center;
+}
+
+.div_search_faq input {
+    font-family: Overlock, FontAwesome;
+}
+
+.menu_gauche_faq a.nav-link.active {
+    background-color: #7de7d6;
+}
+
+.accordion button {
+    color: black;
+    padding: 10px;
+    font-size: 1em;
+}
+
+.accordion button:hover {
+    text-decoration: none;
+    color: grey;
+}
+
+div.accordion button.btn.focus,
+div.accordion button.btn:focus {
+    box-shadow: none!important;
 }
 
 
@@ -1686,6 +1752,13 @@ input.commander {
     /*reservation*/
     .form-reservation {
         width: 100%;
+    }
+    /*faq*/
+    main.faq a.nav-link {
+        text-align: center;
+    }
+    main.faq div.accordion button {
+        text-align: center!important;
     }
     .entete-reservation {
         width: 100%;
