--- a/css/style.css
+++ b/css/style.css
@@ -845,6 +845,62 @@ legend {
 }
 
 
+/*Page actualité e-commerce*/
+
+.actualite_e {
+    margin: 50px auto;
+    justify-content: center;
+    box-sizing: border-box;
+    text-align: center;
+}
+
+.actualite_e h2 {
+    font-family: overlock sans-serif;
+    font-size: 110%;
+    font-weight: 600;
+    padding-top: 10px;
+}
+
+.actualite_e .card {
+    width: 30%;
+    margin: 1%;
+    min-width: 370px!important;
+}
+
+.btn_link.actu {
+    padding: 10px;
+    font-size: 80%;
+}
+
+
+/*Plan du site*/
+
+.plan_du_site li ul li {
+    list-style-position: inside;
+    list-style-type: circle;
+    padding-left: 10px;
+}
+
+.plan_du_site li ul li ul li {
+    list-style-position: intside;
+    list-style-type: disc;
+    padding-left: 10px;
+}
+
+.pds {
+    margin: 5% auto;
+    background-color: whitesmoke;
+    width: 90%;
+    padding: 40px
+}
+
+.pds_main {
+    font-size: 150%;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+
+
 /*FAQ*/
 
 main.faq h1 {
@@ -1192,6 +1248,7 @@ input.commander {
 
 .menu_droit {
     width: 80%;
+    margin-right: 1%;
 }
 
 .col_articles {
@@ -1519,7 +1576,7 @@ input.commander {
         position: relative;
     }
     .menu_droit {
-        width: 100%;
+        width: 90%;
         margin: 0 auto;
     }
     /*page produit*/
@@ -1664,24 +1721,28 @@ input.commander {
     /*Index*/
     .btn_link {
         width: 30%;
-        font-size: 80%;
         padding: 10px;
+        margin-bottom: 10px;
+        font-size: 70%;
     }
-    .carousel-caption {
-        height: 40%;
+    div.carousel-inner .carousel-item:nth-of-type(1) .carousel-caption {
+        height: 160px;
+        top: 10%;
+    }
+    div.carousel-inner .carousel-item:nth-of-type(2) .carousel-caption,
+    div.carousel-inner .carousel-item:nth-of-type(3) .carousel-caption {
+        height: 150px;
+        top: 20%;
     }
     .carousel-caption h1 {
-        font-size: 120%;
+        font-size: 110%;
         padding-bottom: 0px;
         margin-bottom: 20px;
     }
     .carousel-caption h2 {
-        font-size: 120%;
+        font-size: 80%;
         margin-bottom: 10px;
         padding-bottom: 0px;
-    }
-    .btn_link {
-        margin-bottom: 10px;
     }
     .rows3 div {
         width: 80%;
@@ -1820,5 +1881,23 @@ input.commander {
     }
     .logo {
         margin: 0 15%;
+    }
+    /*reservation*/
+    #bg-reservation {
+        padding: 0;
+    }
+    .form-reservation {
+        width: 90%;
+        min-width: 0;
+    }
+    .form-reservation h1 {
+        font-size: 1.5em;
+    }
+    .form-reservation h2 {
+        font-size: 1em;
+        font-family: overlock sans-serif;
+    }
+    .entete-reservation {
+        width: 100%;
     }
 }
