--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@
     color: black;
     margin: 0px;
     padding: 0px;
-    font-size: 1.2rem;
 }
 
 a {
@@ -18,6 +17,7 @@ a {
 
 li {
     list-style-type: none;
+    font-size: 1.5em;
 }
 
 h1 {
@@ -41,6 +41,7 @@ iframe {
 
 p {
     text-align: justify;
+    font-size: 1.5em;
 }
 
 .green-divider {
@@ -48,6 +49,18 @@ p {
     border-radius: 10px;
     width: 60px;
     margin: 0px auto 20px;
+}
+
+.carousel-control-prev-icon.grey {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='ddd' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e")!important;
+}
+
+.carousel-control-next-icon.grey {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='ddd' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5L3.75 4l-2.5 2.5L2.75 8l4-4-4-4z'/%3e%3c/svg%3e")!important;
+}
+
+.card-title {
+    font-size: 1.5em!important;
 }
 
 
@@ -204,11 +217,28 @@ div.logo {
     position: absolute;
     right: 0px;
     top: 35px;
+    cursor: pointer;
 }
 
 #langue ul {
     text-align: right;
     padding-right: 10px;
+}
+
+#langue select {
+    border-radius: 10px;
+    border: 1px solid grey;
+}
+
+#langue select:focus,
+#langue select:active,
+#langue select:focus-visible {
+    border: 1px solid grey;
+}
+
+#langue select:focus,
+#langue select:active {
+    border: 1px solid grey;
 }
 
 #menusearch li {
@@ -254,6 +284,7 @@ input.form-control:focus {
     background-color: transparent;
     border-radius: 0px;
     box-shadow: 0px 10px 10px -10px #7de7d6;
+    text-align: center;
 }
 
 .div_search {
@@ -320,6 +351,7 @@ input.form-control:focus {
     padding: 10px;
     font-weight: 600;
     align-items: center;
+    font-size: 1.5em;
 }
 
 .nav-separator {
@@ -328,6 +360,7 @@ input.form-control:focus {
     font-weight: 600;
     align-items: center;
     color: grey;
+    font-size: 1.5em;
 }
 
 .nav-item:hover {
@@ -399,16 +432,10 @@ input.form-control:focus {
 
 /*Main_index*/
 
-#carousel_main {
-    width: 95%;
-    margin: 0px auto;
-}
-
 .carousel-caption {
     background-color: rgba(255, 255, 255, 0.6)!important;
     border-radius: 5px;
     height: 200px;
-    /* margin: auto!important;*/
     bottom: 15%!important;
     position: relative;
     margin-bottom: 0%;
@@ -433,7 +460,6 @@ input.form-control:focus {
 
 .btn_link {
     width: 100%;
-    height: 40px;
     padding: 20px;
     border-radius: 5px;
     background-color: #7de7d6;
@@ -451,6 +477,18 @@ input.form-control:focus {
     background-color: rgb(255, 255, 255);
     /*#FEEDE3*/
     color: #5f5858;
+}
+
+
+/*Main Populaire*/
+
+article.populaire {
+    width: 95%;
+    margin: 0px auto;
+}
+
+#carousel_populaire {
+    display: flex;
 }
 
 
@@ -521,21 +559,29 @@ input.form-control:focus {
 
 /*MAIN ARTICLE AVIS*/
 
+.avis_index {
+    background-color: whitesmoke;
+    padding-bottom: 10px;
+}
+
 .checked {
     color: #ffdc0f;
 }
 
 .avis_rows3 {
-    display: flex;
     text-align: center;
 }
 
-.avis_rows3 div {
-    width: 25%;
+.block_avis {
+    width: 22%;
     display: inline-block;
-    height: 50%;
-    justify-content: center;
-    padding: 10px;
+    height: 250px;
+    padding: 50px;
+    box-sizing: border-box;
+    border-radius: 15px;
+    margin: 0px 10px;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.8);
 }
 
 .avis_nom {
@@ -549,11 +595,15 @@ input.form-control:focus {
 }
 
 .avis_texte {
-    font-size: 1.1rem;
+    font-size: 1.3em;
 }
 
 
 /*********SECTION FOOTER**********/
+
+footer {
+    padding-top: 30px;
+}
 
 
 /*FOOTER ARTICLE INFORMATION*/
@@ -590,6 +640,10 @@ input.form-control:focus {
     box-sizing: border-box;
     padding: 20px;
     align-items: center;
+}
+
+#reseauxnewsletter h2 {
+    font-size: 2rem!important;
 }
 
 .reseaux {
@@ -882,7 +936,7 @@ legend {
 }
 
 .plan_du_site li ul li ul li {
-    list-style-position: intside;
+    list-style-position: inside;
     list-style-type: disc;
     padding-left: 10px;
 }
@@ -928,6 +982,7 @@ main.faq li {
     background-color: transparent;
     border-radius: 0px;
     box-shadow: 0px 10px 10px -10px #7de7d6;
+    text-align: center;
 }
 
 .div_search_faq {
@@ -976,7 +1031,7 @@ div.accordion button.btn:focus {
 /***Partie gauche panier***/
 
 .panier_gauche {
-    width: 70%;
+    width: 60%;
     margin-left: 30px;
 }
 
@@ -1027,7 +1082,7 @@ div.accordion button.btn:focus {
 
 .panier_droit {
     margin: 5%;
-    width: 30%;
+    width: 40%;
     min-width: 360px;
 }
 
@@ -1052,12 +1107,16 @@ div.accordion button.btn:focus {
 #input_code_promo {
     margin: 15px 0px;
     padding: 5px 10px;
-    width: 210px;
+    width: 310px;
+    border-radius: 10px;
+    border: 1px solid grey;
 }
 
 #btn_code_promo {
     padding: 5px 10px;
     margin-left: 10px;
+    border-radius: 10px;
+    border: 1px solid grey;
 }
 
 input.commander {
@@ -1257,18 +1316,21 @@ input.commander {
 
 .menu_gauche {
     padding-left: 30px;
-    padding-top: 50px;
     margin-right: 20px;
     width: 15%;
     min-width: 215px;
-    top: 0px;
+    top: 100px;
     position: fixed;
     left: 0px;
-    top: 100px;
+    bottom: 0px;
+    background-color: #fff;
+    margin-top: 0px;
+    height: 85%;
+    border-radius: 0px 0px 250px 0px;
+    box-shadow: 4px 10px 10px -10px grey;
 }
 
 .menu_gauche h2 {
-    padding-top: 50px;
     margin-bottom: 20px;
     text-align: left;
     font-weight: 600;
@@ -1336,15 +1398,7 @@ input.commander {
 
 .menu_droit h2,
 .menu_droit h3 {
-    padding-top: 150px;
-}
-
-.col_articles .carousel-control-prev-icon {
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='ddd' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e")!important;
-}
-
-.col_articles .carousel-control-next-icon {
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='ddd' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5L3.75 4l-2.5 2.5L2.75 8l4-4-4-4z'/%3e%3c/svg%3e")!important;
+    padding-top: 50px;
 }
 
 #accessoires {
@@ -1360,12 +1414,9 @@ input.commander {
     min-height: 340px!important;
 }
 
-#accessoires h4 {
-    padding-top: 100px;
-}
-
 .prix {
     font-weight: 600;
+    font-size: 1.5em;
 }
 
 
@@ -1390,14 +1441,6 @@ input.commander {
 .carousel_img_produit {
     width: 55%;
     text-align: center;
-}
-
-.img_descr_produit .carousel-control-prev-icon {
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='ddd' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e")!important;
-}
-
-.img_descr_produit .carousel-control-next-icon {
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='ddd' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5L3.75 4l-2.5 2.5L2.75 8l4-4-4-4z'/%3e%3c/svg%3e")!important;
 }
 
 .image_produit {
@@ -1536,6 +1579,9 @@ input.commander {
         font-size: 150%;
     }
     /*panier*/
+    .panier_droit {
+        width: 60%;
+    }
     .produit_panier {
         flex-wrap: wrap;
         justify-content: center;
@@ -1677,7 +1723,7 @@ input.commander {
     }
     /*panier*/
     .panier {
-        flex-wrap: column;
+        flex-direction: column;
         justify-content: center;
         flex-wrap: wrap;
     }
@@ -1718,6 +1764,24 @@ input.commander {
 }
 
 @media screen and (max-width:768px) {
+    .navbar {
+        position: static;
+    }
+    #menuconnect_panier {
+        margin-top: 104px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        width: 40px;
+        background-color: white;
+        min-width: 35px;
+        border-radius: 0px 0px 0px 20px;
+        box-shadow: 1px 5px 10px 1px grey;
+    }
+    #menuconnect_panier ul {
+        display: flex;
+        flex-direction: column-reverse;
+        text-align: center;
+    }
     /*Index*/
     .btn_link {
         width: 30%;
@@ -1745,7 +1809,7 @@ input.commander {
         padding-bottom: 0px;
     }
     .rows3 div {
-        width: 80%;
+        width: 60%;
     }
     .rows3 a {
         width: 100%;
@@ -1757,7 +1821,7 @@ input.commander {
         display: none;
     }
     .avis_rows3>div {
-        width: 50%;
+        width: 65%;
     }
     .btn_link {
         display: inline-block;
@@ -1857,6 +1921,12 @@ input.commander {
         margin-bottom: 20px;
     }
     /*panier*/
+    .div_descr_panier {
+        line-height: 1.5em;
+    }
+    .div_descr_panier select {
+        font-size: 80%;
+    }
     .produit_panier {
         flex-wrap: wrap;
         justify-content: left;
